--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "thirdparty/depthai-core"]
-	path = thirdparty/depthai-core
+	path = oak_detector/thirdparty/depthai-core
 	url = https://github.com/luxonis/depthai-core.git
